Preparando para producción

--- a/blog_portafolio/production.conf
+++ b/blog_portafolio/production.conf
@@ -1,11 +1,11 @@
 DJANGO_CONFIGURATION = "Prod"
 
+DJANGO_SECRET_KEY = "2GquV5cv(Hu&MBkPFfegK=Dx79fuZ^Sob4#&2hYldS6ih-lGjl"
 
-
-DJANGO_DATABASE_URL = "mysql://root:" # CAMBIAR ESTOS DATOS POR LOS DE LA BASE DE DATOS EN PRODUCCION
+DJANGO_DATABASE_URL = "mysql://root:" # DATOS DE LA BASE DE DATOS EN PRODUCCION
 
 DJANGO_STATIC_ROOT = "/var/www/blog/static"
 DJANGO_MEDIA_ROOT = "/var/www/blog/media"
 
-DJANGO_ALLOWED_HOSTS = "18.231.118.248,xn--inteligenciartificialespaol-evc.com" # PONER LOS HOST QUE DISPONGO
+DJANGO_ALLOWED_HOSTS = "18.231.118.248,xn--inteligenciartificialespaol-evc.com" # HOST QUE DISPONGO
 
