--- a/blog_portafolio/production.conf
+++ b/blog_portafolio/production.conf
@@ -2,10 +2,10 @@ DJANGO_CONFIGURATION = "Prod"
 
 DJANGO_SECRET_KEY = "2GquV5cv(Hu&MBkPFfegK=Dx79fuZ^Sob4#&2hYldS6ih-lGjl"
 
-DJANGO_DATABASE_URL = "mysql://root:" # DATOS DE LA BASE DE DATOS EN PRODUCCION
+DJANGO_DATABASE_URL = "postgres://blog:9981143@localhost/blog"
 
 DJANGO_STATIC_ROOT = "/var/www/blog/static"
 DJANGO_MEDIA_ROOT = "/var/www/blog/media"
 
-DJANGO_ALLOWED_HOSTS = "18.231.118.248,xn--inteligenciartificialespaol-evc.com" # HOST QUE DISPONGO
+DJANGO_ALLOWED_HOSTS = "54.207.76.70,xn--inteligenciartificialespaol-evc.com" # HOST QUE DISPONGO
 
